refactor: 컨트롤러에서 출력하는 부분 제거, InputView, OutputView 에 대한 책임 재분담